force-app/main/default/objects/Budget_Matrix__mdt/Budget_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Budget Matrix</label>
    <pluralLabel>BudgetMatrixes</pluralLabel>
</CustomObject>