force-app/main/default/objects/Budget_Matrix__mdt/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>Industry Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>