force-app/main/default/objects/Budget_Matrix__mdt/listViews/Custom_All.listView-meta.xml
<ListView>
    <fullName>Custom_All</fullName>
    <columns>Type__c</columns>
    <columns>Marketing_Program_Type__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Industry_Code__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>Custom All</label>
    <language>en_US</language>
</ListView>